# trading212-pie-sync

./: .gitignore  README.md  pyproject.toml  requirements.txt  substitutions.json
trading212-pie-sync/: __main__.py  driver.py  navigator.py
