[tool.poetry]
name = "trading212-pie-sync"
version = "0.1.0"
description = ""
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
rich = "^9.10.0"
selenium = "^3.141.0"
chromedriver-autoinstaller = "^0.2.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.6.0"
black = "^20.8b1"

[tool.taskipy.tasks]
start = "python trading212-pie-sync"
freeze = "poetry export -f requirements.txt > requirements.txt --without-hashes"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
